skin/frontend/creo/default/style-ar.css
/* ... */
.design_categories_attributes ul li:nth-child(4n){margin-left:0;}
.sales-order-view .cart-table-area th:before, .cart-table-area td:before{left:inherit;right:12px;border-left:0;border-right:2px solid #f3f3f3;}
.bx-wrapper .bx-viewport ul.slides{left:0;}
.product-detail .price-area{font-size:22px;}
.products-grid .text-area .price{font-size:18px;}
.product-detail .price-area .price-box{display:inline-block;vertical-align:text-bottom;}
.carousel-creo.carousel3{margin:0 0 0 30px;}
.featured-items .text-area h3{
    float: right;
    text-align: right;
}
.featured-items .text-area .price{
    float: left;
    text-align: left;
}
.ajaxlogin-window .input-box .validation-advice {
    text-align: right;
}
.modal-holder .login-popup-form button[type="submit"] {
    float: left;
}
.form-holder .checkbox-holder input[type="checkbox"] {
    float: right;
    margin: 0 0px 0 5px;
}
.form-holder .checkbox-holder label {
    float: right;
}
.form-holder .submit-holder button {
    float: left;

}
.form-holder .submit-holder button:before{
	display: none;
}
.form-holder .submit-holder button:after {
    position: absolute;
    top: -2px;
    right: -22px;
    width: 0;
    height: 0;
    border-style: solid;
    border-width: 0 20px 42px 0px;
    border-color: rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) rgb(241, 97, 103);
    content: '';
}
.form-holder .submit-holder button:hover:after {
    border-color: rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) rgb(0, 0, 0);
}
.column-holder .text-area {
    padding: 0 6px 0 0;
}
.products-grid .text-area .product_name {
    float: right;
    }
.products-grid .text-area .price {
    float: left;
    text-align: left;
}
.products-grid li {
    float: right;
    margin: 0 0 30px 1%;
}
/*.category_top_filters .sort-by select {
direction: rtl;
}
#fme_filters_list .cate-open-close .opener:before {
    left: 5px;
    right: 0;
}
#fme_filters_list .cate-open-close .opener {
    padding: 1px 8px 1px 20px;
}
#fme_filters_list .cate-open-close {
    direction: rtl;
}
.cate-open-close.label_gender {
    right: 0;
}
#fme_filters_list .cate-open-close #label_gender {
    margin-right: -13px;
}*/
#fme_filters_list {
    direction: rtl;
}
.cate-open-close.label_gender {
    right: 0;
}
#fme_filters_list #label_gender {
    padding: 1px 0px 1px 20px;
}
#fme_filters_list .cate-open-close #label_gender.opener:before {
    content: ':';
    border: 0;
    top: 0;
    right: auto;
    left: 5px;
}
#fme_filters_list ul#gender {
    direction: ltr;
}
#fme_filters_list #label_design_category{
	    padding: 1px 8px 1px 20px;
}
#fme_filters_list #label_design_category:before {
    left: 5px;
    right: auto;
}
#fme_filters_list .search-by {
    padding: 3px 10px;
    margin-right: 0;
    margin-left: 5px;
}
.category_top_filters .sort-by label {
    margin: 0 0 0 5px;
}
.cloud-zoom-big {
    left: -375px !important;
}
@media only screen and (max-width: 1199px){

}
@media only screen and (max-width: 991px){
#header{margin-bottom:0;}
.search-form{right:inherit;left:0;top: 20px;}
a.headerLogin{margin:5px 0;}
}

